--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@growthbunker/vueflags": "^0.1.14",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "@vueuse/motion": "^2.0.0",
     "bootstrap": "^5.3.2",
     "firebase": "^10.4.0",
